--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
         viewBinding = true
         mlModelBinding true
     }
+    namespace 'com.example.vaiyu'
+
 }
 
 dependencies {
@@ -45,6 +47,7 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -53,4 +56,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0"
+
+    implementation "androidx.activity:activity-ktx:1.2.3"
+
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
