--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.3"
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
+    implementation "androidx.core:core-splashscreen:1.0.0-beta01"
 }
